# DirectXToy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Sandbox/: CMakeLists.txt
Sandbox/include/Sandbox/: console_dock.h  constant_buffer.h  content_browser.h  default_menu.h  file_dialog.h  game_app.h  game_object.h  gizmos.h  mouse_pick.h  pbr_viewer.h  render_object.h  sandbox.h  scene_hierarchy_panel.h  viewer.h  viewer_specification.h
Sandbox/include/Sandbox/Core/: base.h  common.h  file_dialog.h
Sandbox/include/Sandbox/Dock/: dock.h
Sandbox/include/Sandbox/Docks/: admin_console_dock.h  content_browser_dock.h  dock.h  hierarchy_dock.h  inspector_dock.h  scene_dock.h
Sandbox/include/Sandbox/Runtime/: docking_system.h  editing_system.h  editor.h  gui_system.h  picking_system.h
Sandbox/include/Sandbox/System/: docking_system.h  editing_system.h  gui_system.h  picking_system.h
Sandbox/src/: GameApp.cpp  console_dock.cpp  content_browser.cpp  file_dialog.cpp  game_app.cpp  game_object.cpp  gizmos.cpp  main.cpp  mouse_pick.cpp  pbr_viewer.cpp  render_object.cpp  sandbox.cpp  scene_hierarchy_panel.cpp  viewer.cpp
Sandbox/src/Core/: base.cpp  file_dialog.cpp
Sandbox/src/Docks/: admin_console_dock.cpp  content_browser_dock.cpp  hierarchy_dock.cpp  inspector_dock.cpp  scene_dock.cpp
Sandbox/src/Runtime/: docking_system.cpp  editing_system.cpp  editor.cpp  gui_system.cpp  picking_system.cpp
Sandbox/src/System/: docking_system.cpp  editing_system.cpp  gui_system.cpp  picking_system.cpp
Toy/: CMakeLists.txt
Toy/include/: pch.h
Toy/include/Toy/: toy.h
Toy/include/Toy/Core/: base.h  circular_queue.h  d3d_application.h  d3d_util.h  disable_copyable.h  enum_util.h  input.h  key_code.h  layer.h  logger.h  mouse_code.h  ringbuffer_console_sink.h  simulation.h  singleton.h  subsystem.h  type_index.h
Toy/include/Toy/ECS/: camera.h  collision.h  components.h  entity_wrapper.h
Toy/include/Toy/Events/: event.h  event_delegate.h  event_manager.h  window_event.h
Toy/include/Toy/Geometry/: geometry.h  vertex.h
Toy/include/Toy/ImGui/: imgui_pass.h  imgui_viewport.h
Toy/include/Toy/Model/: material.h  mesh_data.h  model_manager.h  property.h  texture_manager.h
Toy/include/Toy/Renderer/: buffer.h  cascaded_shadow_defines.h  cascaded_shadow_manager.h  constant_data.h  effect_helper.h  effect_interface.h  effects.h  gbuffer_definition.h  illuminant.h  misc.h  render_states.h  shader_defines.h  taa_settings.h  texture_2d.h
Toy/include/Toy/Runtime/: application.h  events.h  input_controller.h  render_window.h  renderer.h  scene_graph.h  simulation.h  task_system.h
Toy/include/Toy/Scene/: camera.h  camera_controller.h  collision.h  components.h  entity.h  scene.h  transform.h
Toy/src/: pch.cpp
Toy/src/Core/: d3d_application.cpp  d3d_util.cpp  input.cpp  logger.cpp  simulation.cpp  subsystem.cpp
Toy/src/ECS/: camera.cpp  collision.cpp  components.cpp  transform.cpp
Toy/src/Events/: event_delegate.cpp  event_manager.cpp
Toy/src/Geometry/: geometry.cpp  vertex.cpp
Toy/src/ImGui/: imgui_pass.cpp  imgui_viewport.cpp
Toy/src/Model/: model_manager.cpp  texture_manager.cpp
Toy/src/Renderer/: base_effects.cpp  buffer.cpp  cascaded_shadow_manager.cpp  deferred_effect.cpp  deferred_pbr_effect.cpp  effect_helper.cpp  forward_effect.cpp  fxaa_effect.cpp  gizmos_wire_effect.cpp  post_process_effect.cpp  pre_process_effect.cpp  render_states.cpp  sample_skybox_effect.cpp  shadow_effect.cpp  skybox_effect.cpp  taa_effect.cpp  texture_2d.cpp
Toy/src/Runtime/: application.cpp  input_controller.cpp  render_window.cpp  renderer.cpp  scene_graph.cpp  simulation.cpp  task_system.cpp
Toy/src/Scene/: camera.cpp  camera_controller.cpp  collision.cpp  components.cpp  entity.cpp  scene.cpp  transform.cpp
data/defer/: basic_deferred.hlsl  compute_shader_tile.hlsl  equirect_to_cube.hlsl  forward.hlsl  forward_tile_info.hlsl  full_screen_triangle.hlsl  fxaa.hlsl  gbuffer.hlsl  irradiance_map.hlsl  rendering.hlsl  skybox.hlsl  sp_brdf.hlsl  sp_env_map.hlsl
data/models/powerplant/: imgui.ini
data/pbr/: aerial_lut.hlsl  cascaded_shadow.hlsl  common_cb.hlsl  computer_shader_tile.hlsl  deferred_common_cb.hlsl  deferred_pbr.hlsl  deferred_registers.hlsl  equirect_to_cube.hlsl  gbuffer.hlsl  gbuffer_registers.hlsl  geometry_vs.hlsl  gizmos_wire_ps.hlsl  gizmos_wire_vs.hlsl  intersection.hlsl  irradiance_map.hlsl  material_cb.hlsl  medium.hlsl  multiscatter.hlsl  pbr_common.hlsl  preprocess_registers.hlsl  samplers.hlsl  screen_triangle_vs.hlsl  shadow_cb.hlsl  shadow_ps.hlsl  shadow_vertex_definitions.hlsl  shadow_vs.hlsl  sky_lut.hlsl  skybox.hlsl  sp_brdf.hlsl  sp_env_map.hlsl  taa.hlsl  tile_info.hlsl  transmittance.hlsl  vertex_definitions.hlsl
data/settings/: imgui.ini
data/shaders/: base_2d_ps.hlsl  base_2d_vs.hlsl  base_3d_ps.hlsl  base_3d_vs.hlsl  base_ps.hlsl  base_vs.hlsl  blur_horiz_cs.hlsl  blur_vert_cs.hlsl  common.hlsli  composite_ps.hlsl  composite_vs.hlsl  light_and_material.hlsli  post_process.hlsli  skybox.hlsli  skybox_ps.hlsl  skybox_vs.hlsl  sobel_cs.hlsl  triangle.hlsli  triangle_ps.hlsl  triangle_vs.hlsl
data/textures/: imgui.ini
data/textures/cgaxis_brown_clay_tiles_4K/: Info-Installation.txt
